first version of Javac plugin configuration, lacks Lombok compatibility and --add-exports support